# server_webrtc

./: .gitignore  check_gpu.py  dump.rdb  main.py  pyproject.toml  start.sh
src/: controllers.py  dtos.py  event_types.py  redis_manager.py  socketio_events.py  web_rtc.py  websocket_manager.py
src/app/: __init__.py  controllers.py  dtos.py  setting.py  web_rtc.py
src/socketio_app/: __init__.py  event_types.py  setting.py  socketio_controllers.py
src/utils/: sender_information.py
src/utils/yolov_tracker/: coordenate.py  drawer.py  rect.py  tracker_manager.py  velocity_estimator.py
src/yolov_tracker/: check_gpu.py  coordenate.py  drawer.py  rect.py  tracker_manager.py
statics/: index.js  index2.js  web_rtc_client.js
web/: index.html  index_aiortc.html
